# Dog-Finder-Solita-GenAI-Hackathon

./: CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: agent.py  breed_enrichment.py  database.py  embeddings.py  main.py  models.py  schemas.py  seed.py  summarizer.py
backend/app/routers/: dogs.py
backend/prompts/: breed_summary_prompt.md  system_prompt.md
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: dogs.js
frontend/src/components/: Navbar.jsx
frontend/src/components/detail/: ChatWindow.jsx  HeroSection.jsx  StatBar.jsx  StatCategory.jsx
frontend/src/components/filters/: CategorySection.jsx  FilterPanel.jsx  RangeSlider.jsx
frontend/src/components/home/: DogCard.jsx  DogGrid.jsx  SortBar.jsx
frontend/src/components/shared/: LoadingSpinner.jsx  StarRating.jsx
frontend/src/pages/: DogDetailPage.jsx  HomePage.jsx
scraping/: scrape.ipynb
scraping/assets/: dogs_cleaned_with_description.csv  dogs_cleaned_with_description_and_img.csv
