[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "polars>=1.41.1",
    "pydantic-ai[openai]>=1.103.0",
    "python-dotenv>=1.2.2",
    "scrapy>=2.16.0",
    "sqlalchemy>=2.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.48.0",
]
