[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "pgvector>=0.3",
    "polars>=1.41.1",
    "psycopg[binary]>=3.2",
    "pydantic-ai[openai]>=1.103.0",
    "python-dotenv>=1.2.2",
    "scrapy>=2.16.0",
    "sqlalchemy[asyncio]>=2.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff.lint.per-file-ignores]
# main.py calls load_dotenv() before importing app modules on purpose:
# app.database / app.routers read env vars at import time, so the env must
# be loaded first. E402 (import not at top of file) is expected here.
"app/main.py" = ["E402"]
